app/sass/style.scss
body {
  font-family: 'Cabin', sans-serif;
  margin: 0;
  padding: 0;
  color: #333333;
  height: 100%;
  background: url("https://s3-us-west-1.amazonaws.com/brunchandboozeimages/Beautiful-juice-.jpg") no-repeat center center fixed;
  background-size: cover;
}


/***************
Landing and Search Field View
***************/


h1 {
  text-align: center;
  font-family: 'Sail', cursive;
  font-size: 330%;
  word-spacing: -12px;
} 


.textbox {
  margin-top: -9%;
  width: 95%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: -15%;
}

.about {
  text-align: center;
  font-size: 150%;
  font-weight: 100;
  line-height: 135%;
} 

.rwd-about {
  display: none;
}

.container {
  margin-top: 70px;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  text-align: center;
}


input {
  display: block;
  margin-top: 10px;
  background: rgba(255,255,255, 0.8);
  width: 150px;
  height: 20px;
  border: white;
  margin: auto; 
}

input[type="text"]{
  font-family: 'Cabin', sans-serif;
  color: #333333;
  font-size: 16px;
}

.rwd-or {
  font-size: 300%;
  font-family: 'Sail', cursive;
  font-weight: bold;
  margin: 5%;
}

.notFound {
  text-align: center;
  font-size: 27px;
  margin-top: 40px;
}



/***************
Found Pairings View
***************/


.pairings {
  max-width:900px;
  margin-top: 50px;
  margin-left: auto;
  margin-right: auto;
  background: white;
  opacity: 0.8;
  color: #333333;
}

.innerbox {
  padding: 10px;
}

.results {
  text-align: center;
}

.results img{
  display: none;
}

.circle {
  width: 250px;
  height: 250px;
  border-radius: 50%;
}

.pair {
   text-align: center;
}

.recipeImage {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  vertical-align: top;
  margin-top: 20px;
}

.recipeInfo {
  text-align: initial;
}

.itemName {
  text-align: center;
  font-size: 200%;
}

.ingredients,
.instructions,
.credits {
  display: none;
}

.ingredients p {
  margin: 0;
  padding: 0;
}


.credits {
  font-weight: lighter;
  opacity: 0.3;
}


.wrapper {
  text-align: center;
  margin-top: 10px;
}

.searchAgain {
  font-size: 20px;
  color: #333333;
  letter-spacing: 0.1em;
  font-weight: lighter;
  opacity: 0.8;
}

.searchAgain:hover {
  font-weight: bold;
  letter-spacing: 0.2em;
  color: #191919;
  cursor: pointer;
  font-size: 22px;
}

/***************
All Recipes List
***************/

.item {
  list-style: none;
}


/***************
    Footer
***************/



.footer {
  bottom: 0;
  width:100%;
  background: white;
  opacity: 0.8;
  position: fixed;
  display: none;
}


.nav {
  margin-top: 3%;
  text-align: center;
  font-size: 16px;  
  line-height: 16px;   
  text-transform: uppercase;  
}

.nav a {
  padding: 10px 20px 10px 20px;
  text-decoration: none;
  font-weight: 300;
  color: black;
  letter-spacing: 0.1em;
}

 a:hover {
  font-weight: bold;
  letter-spacing: 0.2em;
}


.copyright {
  font-size: 14px;
  color: #EAEAEA;
}




/*******************************************************************************/
/*******************************************************************************/
/*******************************************************************************/
/*******************************************************************************/
/*******************************************************************************/
@media screen and (min-width: 600px) {

  .heading {
    margin-top: -55px;
  }

  h1 {
    font-size: 800%;
  }

  .textbox {
    width: 55%;
    margin-top: -60px;
    margin-bottom: initial;
  }

  .rwd-about {
    display: initial;
  }


  .container {
    max-width: 550px;
    text-align: initial;
  }

  .brunchContainer {
    display: inline-block;
  }

  .brunchContainer img {
    margin-left: 35px;
  }

  .boozeContainer {
    display: inline-block;
    margin-left: 242px;
  }

  .boozeContainer img {
    margin-left: 40px;
  }

  .rwd-or {
    display: none;
  }

  /***************
      Footer
  ***************/

    
  .footer {
    height: 100px;
    display: initial;
  }

  .nav {
    margin-top: 40px;
  }
  
 /***************
      pairing view
  ***************/

  .results img {
    display: initial;
  }

  .ingredients,
  .instructions,
  .credits {
    display: initial;
  }

  .recipe {
    display: inline-block;
  }


  .recipeInfo {
    padding-left: 20px;
    max-width: 600px;
  }

  .itemName {
    text-align: initial;
    font-size: initial;
  }

}

